# Kaggle-skill

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
references/: egress-allowlist.md  kaggle-cli-behavior.md
scripts/: analyze_data.py  capture_competition.py  check_credentials.py  check_submission.py  competition_doc.py  convert_notebook.py  cv_evidence.py  download_data.py  experiment_meta.py  fetch_lb.py  init_workspace.py  kaggle_gateway.py  lb_gap.py  leak_scan.py  metric_registry.py  poll_kernel.py  pull_kernel.py  push_kernel.py  rebuild_ledger.py  record_experiment.py  regen_strategy.py  run_local.py  safe_extract.py  scaffold_experiment.py  set_metric.py  submission_gate.py  submissions_log.py  submit.py  untrusted.py
scripts/templates/: README.md.tmpl  VERDICT.md.tmpl  competition.md.tmpl  config.json.tmpl  env.tmpl  experiment.py.tmpl  gitignore.tmpl  (+7 more)
tests/: conftest.py  cv_fixtures.py  test_budget.py  test_capture.py  test_check_submission.py  test_competition_live.py  test_config.py  test_convert_notebook.py  test_credentials.py  test_credentials_live.py  test_cv_evidence.py  test_egress_allowlist.py  test_experiment_meta.py  test_extract.py  test_fetch_lb.py  test_gate.py  test_gate_policy.py  test_gateway.py  test_gitignore.py  test_init_workspace.py  test_kernel_live.py  test_lb_gap.py  test_leak_scan.py  test_limit_regex.py  test_metric_registry.py  test_no_credential_leak.py  test_poll_kernel.py  test_push_kernel.py  test_rebuild_ledger.py  test_record_experiment.py  test_record_kernel.py  test_regen_strategy.py  test_resolve_data_dir.py  test_run_cv.py  test_run_local.py  test_scaffold_experiment.py  test_set_metric.py  test_settings.py  test_submission_live.py  test_submissions_log.py  (+2 more)
(+117 files in other folders)
