# SKILL PACKAGE pyproject.toml (repo root).
#
# This is the kaggle-exp SKILL's OWN package metadata + test config. It is
# DISTINCT from scripts/templates/pyproject.toml.tmpl — the minimal WORKSPACE
# stub that `init_workspace.py` scaffolds into a competition folder (D-14).
# Do not confuse the two: this file configures the skill's dev/test tooling;
# the .tmpl file configures a scaffolded competition workspace.
#
# The skill's own runtime scripts are stdlib-only (D-14); pytest and kaggle are
# dev/test dependencies only, never runtime dependencies. `kaggle` is required by
# the `-m live` credential test (tests/test_credentials_live.py) which shells out
# to the real CLI — declaring it here keeps that test reproducible from a clean
# checkout (per CLAUDE.md: "Declare deps; let uv/the user install"; no bare
# runtime pip installs). check_credentials.py itself never imports kaggle — it
# only invokes the CLI via subprocess when present (D-07 degrades gracefully if
# absent), so this is purely a dev/live-test dependency.

[project]
name = "kaggle-exp"
version = "0.1.0"
description = "Kaggle competition experimentation skill — guided workspace init, credential validation, egress guardrails, and a git-backed experiment ledger."
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "kaggle>=2.2",  # dev/live-only: exercised by tests/test_credentials_live.py -m live
]

# This project is a skill package, not an installable Python distribution:
# there is no build backend and no importable top-level package. Tell uv not to
# try to build/install the project itself — only manage the (dev) environment.
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: requires a real Kaggle API token (excluded from default runs)",
]
